# Geohash-rust

./: .travis.yml  Cargo.toml  README.md
benches/: benchmark.rs
src/: bounding_box.rs  geohash_bits.rs  geohash_iterator.rs  lib.rs  location.rs
