[package]
name = "geohash"
version = "0.2.0"
authors = ["michael groble <mike@groble.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
lazy_static = "1.3.0"
packed_simd = {version = "0.3.3", optional = true }

[features]
default = []
simd = ["packed_simd"]
